Two more machines
+Added Solar Generator
+Added Macerator
+Added a recipe class for the Macerator
+Fixed a duplication bug with the Electric Furnace

=Updated HalpLibe to 2.1.4
=Replaced deprecated functions

--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -51,8 +51,12 @@ tile.industry.machine.casing.advanced.name=Advanced Machine Casing
 tile.industry.machine.casing.advanced.desc=
 tile.industry.machine.generator.name=Generator
 tile.industry.machine.generator.desc=
+tile.industry.machine.generator.solar.name=Solar Generator
+tile.industry.machine.generator.solar.desc=
 tile.industry.machine.furnace.name=Electric Furnace
 tile.industry.machine.furnace.desc=
+tile.industry.machine.macerator.name=Macerator
+tile.industry.machine.macerator.desc=
 
 item.industry.ore.raw.copper.name=Raw Copper Ore
 item.industry.ore.raw.copper.desc=
