New Machine, Updates
+Added Watermill generator
+Added fuels package
+Added Bronze Block recipe
+Updated Insulated Cable textures

=Updated Halplibe to 2.4.0
=Updated EnergyAPI to 1.1.8
=Changed some class names to fix capitalization
=Fixed GUI display from EnergyAPI
=Changed tool textures

-Removed PrismaticLibe

--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -53,6 +53,8 @@ tile.industry.machine.generator.name=Generator
 tile.industry.machine.generator.desc=
 tile.industry.machine.generator.geothermal.name=Geothermal Generator
 tile.industry.machine.generator.geothermal.desc=
+tile.industry.machine.generator.watermill.name=Watermill
+tile.industry.machine.generator.watermill.desc=
 tile.industry.machine.generator.solar.name=Solar Generator
 tile.industry.machine.generator.solar.desc=
 
