Shift Clicking + MV Compressor
+Added shift clicking to all machines (ty Useless)
+Added "Singularity Compressor"
+Machines should now explode again
=Changed all LV machines to use 16
-Removed unused scaled progress argument

--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -93,6 +93,8 @@ tile.industry.machine.recycler.desc=
 
 tile.industry.advanced.macerator.name=Rotary Macerator
 tile.industry.advanced.macerator.desc=
+tile.industry.advanced.compressor.name=Singularity Compressor
+tile.industry.advanced.compressor.desc=
 
 tile.industry.block.coal.hardened.name=Hardened Carbon
 tile.industry.block.coal.hardened.desc=
