Terrain API + Start of BTWaila support
+Added Terrain API
+Added BTWaila Entrypoint
=Made some Generator values and variables public
-Removed ChunkDecoratorOverworldMixin

--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -50,7 +50,7 @@ tile.industry.machine.casing.desc=
 tile.industry.machine.casing.advanced.name=Advanced Machine Casing
 tile.industry.machine.casing.advanced.desc=
 tile.industry.machine.generator.name=Generator
-tile.industry.machine.generator.desc=
+tile.industry.machine.generator.desc=This is a test
 tile.industry.machine.generator.geothermal.name=Geothermal Generator
 tile.industry.machine.generator.geothermal.desc=
 tile.industry.machine.generator.watermill.name=Watermill
@@ -81,7 +81,7 @@ tile.industry.machine.batbox.shv.desc=
 tile.industry.machine.furnace.name=Electric Furnace
 tile.industry.machine.furnace.desc=
 tile.industry.machine.macerator.name=Macerator
-tile.industry.machine.macerator.desc=
+tile.industry.machine.macerator.desc=This is a test
 tile.industry.machine.compressor.name=Compressor
 tile.industry.machine.compressor.desc=
 tile.industry.machine.cutter.name=Cutter
