--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -100,12 +100,16 @@ tile.industry.machine.recycler.desc=
 tile.industry.machine.cannery.name=Canning Machine
 tile.industry.machine.cannery.desc=
 
+tile.industry.advanced.furnace.name=Induction furnace
+tile.industry.advanced.furnace.desc=
 tile.industry.advanced.macerator.name=Rotary Macerator
 tile.industry.advanced.macerator.desc=
 tile.industry.advanced.compressor.name=Singularity Compressor
 tile.industry.advanced.compressor.desc=
 tile.industry.advanced.cutter.name=Laser Cutter
 tile.industry.advanced.cutter.desc=
+tile.industry.advanced.extractor.name=Centrifuge Extractor
+tile.industry.advanced.extractor.desc=
 
 tile.industry.block.coal.hardened.name=Hardened Carbon
 tile.industry.block.coal.hardened.desc=
@@ -205,6 +209,8 @@ item.industry.cell.lava.name=Lava Cell
 item.industry.cell.lava.desc=
 item.industry.cell.uranium.name=Uranium Cell
 item.industry.cell.uranium.desc=
+item.industry.cell.coolant.name=Coolant Cell
+item.industry.cell.coolant.desc=
 
 item.industry.can.empty.name=Empty Can
 item.industry.can.empty.desc=
