--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -39,7 +39,7 @@ tile.industry.cable.copper.desc=
 tile.industry.cable.tin.name=Tin Cable
 tile.industry.cable.tin.desc=
 tile.industry.cable.gold.name=Gold Cable
-tile.industry.cable.gold.desc=
+tile.industry.cable.gold.desc=Sweet, sweet onion rings.
 tile.industry.cable.steel.name=Steel Cable
 tile.industry.cable.steel.desc=
 
@@ -77,12 +77,12 @@ tile.industry.batbox.hv.desc=
 tile.industry.batbox.ehv.name=EHV Batbox
 tile.industry.batbox.ehv.desc=
 
-tile.industry.machine.transformer.mvtolv.name=MV to LV Transformer
-tile.industry.machine.transformer.mvtolv.desc=
-tile.industry.machine.transformer.hvtomv.name=HV to MV Transformer
-tile.industry.machine.transformer.hvtomv.desc=
-tile.industry.machine.transformer.shvtohv.name=EHV to HV Transformer
-tile.industry.machine.transformer.shvtohv.desc=
+tile.industry.transformer.mvtolv.name=LV Transformer
+tile.industry.transformer.mvtolv.desc=
+tile.industry.transformer.hvtomv.name=MV Transformer
+tile.industry.transformer.hvtomv.desc=
+tile.industry.transformer.ehvtohv.name=HV Transformer
+tile.industry.transformer.ehvtohv.desc=
 
 tile.industry.machine.furnace.name=Electric Furnace
 tile.industry.machine.furnace.desc=
@@ -90,8 +90,8 @@ tile.industry.machine.macerator.name=Macerator
 tile.industry.machine.macerator.desc=This is a test
 tile.industry.machine.compressor.name=Compressor
 tile.industry.machine.compressor.desc=
-tile.industry.machine.cutter.name=Cutter
-tile.industry.machine.cutter.desc=
+tile.industry.machine.wiremill.name=Wiremill
+tile.industry.machine.wiremill.desc=
 tile.industry.machine.extractor.name=Extractor
 tile.industry.machine.extractor.desc=
 tile.industry.machine.recycler.name=Recycler
@@ -167,7 +167,7 @@ item.industry.cable.copper.desc=
 item.industry.cable.tin.name=Tin Cable
 item.industry.cable.tin.desc=
 item.industry.cable.gold.name=Gold Cable
-item.industry.cable.gold.desc=
+item.industry.cable.gold.desc=Sweet sweet onion rings.
 item.industry.cable.steel.name=Steel Cable
 item.industry.cable.steel.desc=
 item.industry.cable.glass.name=Glass Cable
