--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -99,15 +99,15 @@ tile.industry.machine.recycler.desc=
 tile.industry.machine.cannery.name=Canning Machine
 tile.industry.machine.cannery.desc=
 
-tile.industry.advanced.furnace.name=Induction furnace
+tile.industry.advanced.furnace.name=Advanced Electric Furnace
 tile.industry.advanced.furnace.desc=
-tile.industry.advanced.macerator.name=Rotary Macerator
+tile.industry.advanced.macerator.name=Advanced Macerator
 tile.industry.advanced.macerator.desc=
-tile.industry.advanced.compressor.name=Singularity Compressor
+tile.industry.advanced.compressor.name=Advanced Compressor
 tile.industry.advanced.compressor.desc=
-tile.industry.advanced.cutter.name=Laser Cutter
-tile.industry.advanced.cutter.desc=
-tile.industry.advanced.extractor.name=Centrifuge Extractor
+tile.industry.advanced.wiremill.name=Advanced Wiremill
+tile.industry.advanced.wiremill.desc=
+tile.industry.advanced.extractor.name=Advanced Extractor
 tile.industry.advanced.extractor.desc=
 
 tile.industry.block.coal.hardened.name=Hardened Carbon
