--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -1,229 +1,228 @@
-tile.industry.ore.copper.stone.name=Stone Copper Ore
-tile.industry.ore.copper.stone.desc=
-tile.industry.ore.copper.basalt.name=Basalt Copper Ore
-tile.industry.ore.copper.basalt.desc=
-tile.industry.ore.copper.limestone.name=Limestone Copper Ore
-tile.industry.ore.copper.limestone.desc=
-tile.industry.ore.copper.granite.name=Granite Copper Ore
-tile.industry.ore.copper.granite.desc=
-
 tile.industry.ore.tin.stone.name=Stone Tin Ore
-tile.industry.ore.tin.stone.desc=
+tile.industry.ore.tin.stone.desc=Tin nuggets embedded in stone.
 tile.industry.ore.tin.basalt.name=Basalt Tin Ore
-tile.industry.ore.tin.basalt.desc=
+tile.industry.ore.tin.basalt.desc=Tin nuggets embedded in basalt.
 tile.industry.ore.tin.limestone.name=Limestone Tin Ore
-tile.industry.ore.tin.limestone.desc=
+tile.industry.ore.tin.limestone.desc=Tin nuggets embedded in limestone.
 tile.industry.ore.tin.granite.name=Granite Tin Ore
-tile.industry.ore.tin.granite.desc=
+tile.industry.ore.tin.granite.desc=Tin nuggets embedded in granite.
+
+tile.industry.ore.copper.stone.name=Stone Copper Ore
+tile.industry.ore.copper.stone.desc=Copper nuggets embedded in stone.
+tile.industry.ore.copper.basalt.name=Basalt Copper Ore
+tile.industry.ore.copper.basalt.desc=Copper nuggets embedded in basalt.
+tile.industry.ore.copper.limestone.name=Limestone Copper Ore
+tile.industry.ore.copper.limestone.desc=Copper nuggets embedded in limestone.
+tile.industry.ore.copper.granite.name=Granite Copper Ore
+tile.industry.ore.copper.granite.desc=Copper nuggets embedded in granite.
 
 tile.industry.ore.uranium.stone.name=Stone Uranium Ore
-tile.industry.ore.uranium.stone.desc=
+tile.industry.ore.uranium.stone.desc=A chunk of uranium embedded in stone.
 tile.industry.ore.uranium.basalt.name=Basalt Uranium Ore
-tile.industry.ore.uranium.basalt.desc=
+tile.industry.ore.uranium.basalt.desc=A chunk of uranium embedded in basalt.
 tile.industry.ore.uranium.limestone.name=Limestone Uranium Ore
-tile.industry.ore.uranium.limestone.desc=
+tile.industry.ore.uranium.limestone.desc=A chunk of uranium embedded in limestone.
 tile.industry.ore.uranium.granite.name=Granite Uranium Ore
-tile.industry.ore.uranium.granite.desc=
+tile.industry.ore.uranium.granite.desc=A chunk of uranium embedded in granite.
 
-tile.industry.block.copper.name=Block of Copper
-tile.industry.block.copper.desc=
 tile.industry.block.tin.name=Block of Tin
-tile.industry.block.tin.desc=
+tile.industry.block.tin.desc=A solid block of tin.
+tile.industry.block.copper.name=Block of Copper
+tile.industry.block.copper.desc=A solid block of copper. Shocking!
 tile.industry.block.bronze.name=Block of Bronze
-tile.industry.block.bronze.desc=
+tile.industry.block.bronze.desc=A solid block of bronze.
 tile.industry.block.uranium.name=Block of Uranium
-tile.industry.block.uranium.desc=
+tile.industry.block.uranium.desc=A solid block of uranium. Be careful!
 
-tile.industry.cable.copper.name=Copper Cable
-tile.industry.cable.copper.desc=
 tile.industry.cable.tin.name=Tin Cable
-tile.industry.cable.tin.desc=
+tile.industry.cable.tin.desc=A bundle of tin cable.
+tile.industry.cable.copper.name=Copper Cable
+tile.industry.cable.copper.desc=A bundle of copper cable.
 tile.industry.cable.gold.name=Gold Cable
-tile.industry.cable.gold.desc=Sweet, sweet onion rings.
+tile.industry.cable.gold.desc=A bundle of gold cable. Sweet sweet onion rings.
 tile.industry.cable.steel.name=Steel Cable
-tile.industry.cable.steel.desc=
+tile.industry.cable.steel.desc=A bundle of steel cable.
 
 tile.industry.machine.casing.name=Machine Casing
-tile.industry.machine.casing.desc=
+tile.industry.machine.casing.desc=A thin iron casing used to make machines.
 tile.industry.machine.casing.advanced.name=Advanced Machine Casing
-tile.industry.machine.casing.advanced.desc=
+tile.industry.machine.casing.advanced.desc=A thin steel casing used to make more advanced machines.
 
 tile.industry.generator.name=Generator
-tile.industry.generator.desc=
+tile.industry.generator.desc=For turning fuel into power.
 tile.industry.generator.watermill.name=Watermill
-tile.industry.generator.watermill.desc=
+tile.industry.generator.watermill.desc=For turning water into power.
 tile.industry.generator.windmill.name=Windmill
-tile.industry.generator.windmill.desc=
+tile.industry.generator.windmill.desc=For turning the wind itself into power.
 tile.industry.generator.geothermal.name=Geothermal Generator
-tile.industry.generator.geothermal.desc=
+tile.industry.generator.geothermal.desc=For turning lava into power. Hot!
 tile.industry.generator.solar.name=Solar Generator
-tile.industry.generator.solar.desc=
+tile.industry.generator.solar.desc=For turning the sun's rays into power.
 
 tile.industry.array.lv.name=LV Solar Array
-tile.industry.array.lv.desc=
+tile.industry.array.lv.desc=A bundle of solar generators in one block.
 tile.industry.array.mv.name=MV Solar Array
-tile.industry.array.mv.desc=
+tile.industry.array.mv.desc=A bundle of arrays in one block.
 tile.industry.array.hv.name=HV Solar Array
-tile.industry.array.hv.desc=
+tile.industry.array.hv.desc=A bundle of arrays in one block.
 tile.industry.array.ehv.name=EHV Solar Array
-tile.industry.array.ehv.desc=
+tile.industry.array.ehv.desc=A bundle of arrays in one block.
 
 tile.industry.batbox.lv.name=LV Batbox
-tile.industry.batbox.lv.desc=
+tile.industry.batbox.lv.desc=For holding your unlimited limited power.
 tile.industry.batbox.mv.name=MV Batbox
-tile.industry.batbox.mv.desc=
+tile.industry.batbox.mv.desc=For holding your unlimited limited power.
 tile.industry.batbox.hv.name=HV Batbox
-tile.industry.batbox.hv.desc=
+tile.industry.batbox.hv.desc=For holding your unlimited limited power.
 tile.industry.batbox.ehv.name=EHV Batbox
-tile.industry.batbox.ehv.desc=
+tile.industry.batbox.ehv.desc=For holding your unlimited limited power.
 
 tile.industry.transformer.mvtolv.name=LV Transformer
-tile.industry.transformer.mvtolv.desc=
+tile.industry.transformer.mvtolv.desc=Turns your medium voltage power to low voltage.
 tile.industry.transformer.hvtomv.name=MV Transformer
-tile.industry.transformer.hvtomv.desc=
+tile.industry.transformer.hvtomv.desc=Turns your high voltage power to medium voltage.
 tile.industry.transformer.ehvtohv.name=HV Transformer
-tile.industry.transformer.ehvtohv.desc=
+tile.industry.transformer.ehvtohv.desc=Turns your extra high voltage power to high voltage.
 
 tile.industry.machine.furnace.name=Electric Furnace
-tile.industry.machine.furnace.desc=
+tile.industry.machine.furnace.desc=For melting, heating, and cooking blocks and items with POWER!
 tile.industry.machine.macerator.name=Macerator
-tile.industry.machine.macerator.desc=This is a test
+tile.industry.machine.macerator.desc=For crushing blocks and items into finer things.
 tile.industry.machine.compressor.name=Compressor
-tile.industry.machine.compressor.desc=
+tile.industry.machine.compressor.desc=For compressing blocks and items.
 tile.industry.machine.wiremill.name=Wiremill
-tile.industry.machine.wiremill.desc=
+tile.industry.machine.wiremill.desc=For cutting blocks and items into thinner blocks and items.
 tile.industry.machine.extractor.name=Extractor
-tile.industry.machine.extractor.desc=
+tile.industry.machine.extractor.desc=For extracting blocks and items from other blocks and items.
 tile.industry.machine.recycler.name=Recycler
-tile.industry.machine.recycler.desc=
+tile.industry.machine.recycler.desc=For recycling your garbage.
 tile.industry.machine.cannery.name=Canning Machine
-tile.industry.machine.cannery.desc=
+tile.industry.machine.cannery.desc=For canning your food into shelf-stable food.
 
 tile.industry.advanced.furnace.name=Advanced Electric Furnace
-tile.industry.advanced.furnace.desc=
+tile.industry.advanced.furnace.desc=For melting, heating, and cooking blocks and items with EVEN MORE POWER!!!
 tile.industry.advanced.macerator.name=Advanced Macerator
-tile.industry.advanced.macerator.desc=
+tile.industry.advanced.macerator.desc==For crushing blocks and items into even finer things.
 tile.industry.advanced.compressor.name=Advanced Compressor
-tile.industry.advanced.compressor.desc=
+tile.industry.advanced.compressor.desc=For compressing blocks and items even more.
 tile.industry.advanced.wiremill.name=Advanced Wiremill
-tile.industry.advanced.wiremill.desc=
+tile.industry.advanced.wiremill.desc=For cutting blocks and items into thinner-er-er blocks and items.
 tile.industry.advanced.extractor.name=Advanced Extractor
-tile.industry.advanced.extractor.desc=
+tile.industry.advanced.extractor.desc=For extracting blocks and items from other blocks and items.
 
 tile.industry.block.coal.hardened.name=Hardened Carbon
-tile.industry.block.coal.hardened.desc=
+tile.industry.block.coal.hardened.desc=With a little more compression, can turn into a fine gem.
 
-tile.industry.leaves.rubber.name=Rubber-Tree Leaves
-tile.industry.leaves.rubber.desc=
-tile.industry.log.rubber.name=Rubber-Tree Log
-tile.industry.log.rubber.desc=
-tile.industry.sapling.rubber.name=Rubber-Tree Sapling
-tile.industry.sapling.rubber.desc=
+tile.industry.leaves.rubber.name=RubberWood Leaves
+tile.industry.leaves.rubber.desc=Leaves from a rubberwood tree.
+tile.industry.log.rubber.name=RubberWood Log
+tile.industry.log.rubber.desc=A log from a rubberwood tree.
+tile.industry.log.rubber.resin.name=RubberWood Resin Log
+tile.industry.log.rubber.resin.desc=A log full of resin from a rubberwood tree.
+tile.industry.sapling.rubber.name=RubberWood Sapling
+tile.industry.sapling.rubber.desc=Plant to grow a rubberwood tree.
 
-item.industry.ore.raw.copper.name=Raw Copper Ore
-item.industry.ore.raw.copper.desc=
 item.industry.ore.raw.tin.name=Raw Tin Ore
-item.industry.ore.raw.tin.desc=
+item.industry.ore.raw.tin.desc=A chunk of unprocessed tin. Can be smelted into a tin ingot.
+item.industry.ore.raw.copper.name=Raw Copper Ore
+item.industry.ore.raw.copper.desc=A chunk of unprocessed copper. Can be smelted into a copper ingot.
 item.industry.ore.raw.uranium.name=Raw Uranium
-item.industry.ore.raw.uranium.desc=
+item.industry.ore.raw.uranium.desc=A chunk of unprocessed uranium. Can be compressed into a uranium ingot.
 
-item.industry.dust.copper.name=Copper Dust
-item.industry.dust.copper.desc=
 item.industry.dust.tin.name=Tin Dust
-item.industry.dust.tin.desc=
+item.industry.dust.tin.desc=A pile of unprocessed tin. Can be smelted into a tin ingot.
+item.industry.dust.copper.name=Copper Dust
+item.industry.dust.copper.desc=A pile of unprocessed copper. Can be smelted into a copper ingot.
 item.industry.dust.bronze.name=Bronze Dust
-item.industry.dust.bronze.desc=
+item.industry.dust.bronze.desc=A pile of alloyed tin and copper. Can be smelted into a bronze ingot.
 item.industry.dust.iron.name=Iron Dust
-item.industry.dust.iron.desc=
+item.industry.dust.iron.desc=A pile of unprocessed iron dust. Can be smelted into an iron ingot.
 item.industry.dust.gold.name=Gold Dust
-item.industry.dust.gold.desc=
+item.industry.dust.gold.desc=A pile of unprocessed iron dust. Can be smelted into a gold ingot.
 item.industry.dust.coal.name=Coal Dust
-item.industry.dust.coal.desc=
+item.industry.dust.coal.desc=A pile of coal dust used for fuel.
 
-item.industry.ingot.copper.name=Copper Ingot
-item.industry.ingot.copper.desc=
 item.industry.ingot.tin.name=Tin Ingot
-item.industry.ingot.tin.desc=
+item.industry.ingot.tin.desc=A metal bar of tin used for casings.
+item.industry.ingot.copper.name=Copper Ingot
+item.industry.ingot.copper.desc=A metal bar of copper used for electricity.
 item.industry.ingot.bronze.name=Bronze Ingot
-item.industry.ingot.bronze.desc=
+item.industry.ingot.bronze.desc=Tin and copper fused into an iron-like alloy.
 item.industry.ingot.uranium.name=Uranium Ingot
-item.industry.ingot.uranium.desc=
+item.industry.ingot.uranium.desc=A metal bar of uranium used for nuclear science.
 
-item.industry.plate.copper.name=Copper Plate
-item.industry.plate.copper.desc=
 item.industry.plate.tin.name=Tin Plate
-item.industry.plate.tin.desc=
+item.industry.plate.tin.desc=A plate of tin.
+item.industry.plate.copper.name=Copper Plate
+item.industry.plate.copper.desc=A plate of copper.
 item.industry.plate.bronze.name=Bronze Plate
-item.industry.plate.bronze.desc=
+item.industry.plate.bronze.desc=A plate of bronze.
 item.industry.plate.iron.name=Iron Plate
-item.industry.plate.iron.desc=
+item.industry.plate.iron.desc=A plate of iron.
 item.industry.plate.gold.name=Gold Plate
-item.industry.plate.gold.desc=
+item.industry.plate.gold.desc=A plate of gold.
 item.industry.plate.steel.name=Steel Plate
-item.industry.plate.steel.desc=
+item.industry.plate.steel.desc=A plate of steel.
 
-item.industry.cable.copper.name=Copper Cable
-item.industry.cable.copper.desc=
 item.industry.cable.tin.name=Tin Cable
-item.industry.cable.tin.desc=
+item.industry.cable.tin.desc=A bundle of tin cable.
+item.industry.cable.copper.name=Copper Cable
+item.industry.cable.copper.desc=A bundle of copper cable.
 item.industry.cable.gold.name=Gold Cable
-item.industry.cable.gold.desc=Sweet sweet onion rings.
+item.industry.cable.gold.desc=A bundle of gold cable. Sweet sweet onion rings.
 item.industry.cable.steel.name=Steel Cable
-item.industry.cable.steel.desc=
-item.industry.cable.glass.name=Glass Cable
-item.industry.cable.glass.desc=
+item.industry.cable.steel.desc=A bundle of steel cable.
 
-item.industry.insulated.cable.copper.name=Insulated Copper Cable
-item.industry.insulated.cable.copper.desc=
 item.industry.insulated.cable.tin.name=Insulated Tin Cable
-item.industry.insulated.cable.tin.desc=
+item.industry.insulated.cable.tin.desc=A bundle of insulated tin cable.
+item.industry.insulated.cable.copper.name=Insulated Copper Cable
+item.industry.insulated.cable.copper.desc=A bundle of insulated copper cable. Looks like a centipede...
 item.industry.insulated.cable.gold.name=Insulated Gold Cable
-item.industry.insulated.cable.gold.desc=
+item.industry.insulated.cable.gold.desc=A bundle of insulated gold cable.
 item.industry.insulated.cable.steel.name=Insulated Steel Cable
-item.industry.insulated.cable.steel.desc=
+item.industry.insulated.cable.steel.desc=A bundle of insulated steel cable.
 
 item.industry.tool.treetap.name=Tree Tap
-item.industry.tool.treetap.desc=
+item.industry.tool.treetap.desc=A wooden tap used to extract fluids from trees.
 item.industry.tool.hammer.name=Hammer
-item.industry.tool.hammer.desc=
+item.industry.tool.hammer.desc=A strong hammer used to smash ingots into plates.
 item.industry.tool.cutters.name=Wire Cutters
-item.industry.tool.cutters.desc=
+item.industry.tool.cutters.desc=A pair of thinly made cutters used to cut ingots into cable.
 item.industry.tool.wrench.name=Wrench
-item.industry.tool.wrench.desc=
+item.industry.tool.wrench.desc=A trusty wrench used to pick up machines.
 
 item.industry.battery.redstone.name=Redstone Battery
-item.industry.battery.redstone.desc=
+item.industry.battery.redstone.desc=A redstone battery, with a tin casing.
 item.industry.battery.advanced.name=Advanced Battery
-item.industry.battery.advanced.desc=
+item.industry.battery.advanced.desc=A sulphur and redstone battery, with a bronze casing.
 item.industry.battery.crystal.name=Crystal Battery
-item.industry.battery.crystal.desc=
+item.industry.battery.crystal.desc=A diamond surrounded by redstone.
 item.industry.battery.lapis.name=Lapis Battery
-item.industry.battery.lapis.desc=
+item.industry.battery.lapis.desc=A diamond surrounded by lapis. How does this contain power?
 
-item.industry.cell.empty.name=Cell
-item.industry.cell.empty.desc=
+item.industry.cell.empty.name=Empty Cell
+item.industry.cell.empty.desc=Used to hold various liquids. Once.
 item.industry.cell.water.name=Water Cell
-item.industry.cell.water.desc=
+item.industry.cell.water.desc=A cell full of the deep blue.
 item.industry.cell.lava.name=Lava Cell
-item.industry.cell.lava.desc=
+item.industry.cell.lava.desc=A cell full of molten rock. Hot!
 item.industry.cell.uranium.name=Uranium Cell
-item.industry.cell.uranium.desc=
+item.industry.cell.uranium.desc=A cell full of rock. Be careful!
 item.industry.cell.coolant.name=Coolant Cell
-item.industry.cell.coolant.desc=
+item.industry.cell.coolant.desc=A cell full of ice. Brrr!
 
 item.industry.can.empty.name=Empty Can
-item.industry.can.empty.desc=
+item.industry.can.empty.desc=Used to hold various food items.
 item.industry.can.food.name=Filled Can
-item.industry.can.food.desc=
+item.industry.can.food.desc=Holds mystery food. Yummy!
 
 item.industry.resin.name=Resin
-item.industry.resin.desc=
+item.industry.resin.desc=Rubberwood blood.
 item.industry.rubber.name=Rubber
-item.industry.rubber.desc=
+item.industry.rubber.desc=A bar of black rubber. Boing!
 item.industry.circuit.name=Circuit
-item.industry.circuit.desc=
+item.industry.circuit.desc=A piece of metal with various beeps and boops on it.
 item.industry.circuitadvanced.name=Advanced Circuit
-item.industry.circuitadvanced.desc=
-
+item.industry.circuitadvanced.desc=A piece of metal with advanced beeps and boops on it.
 item.industry.scrap.name=Scrap
-item.industry.scrap.desc=
+item.industry.scrap.desc=A useless ball of recycled material.
