--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -122,6 +122,11 @@ tile.industry.log.rubber.resin.desc=A log full of resin from a rubberwood tree.
 tile.industry.sapling.rubber.name=RubberWood Sapling
 tile.industry.sapling.rubber.desc=Plant to grow a rubberwood tree.
 
+tile.industry.reactor.name=Nuclear Reactor
+tile.industry.reactor.desc=
+tile.industry.reactor.chamber.name=Reactor Chamber
+tile.industry.reactor.chamber.desc=
+
 item.industry.ore.raw.tin.name=Raw Tin Ore
 item.industry.ore.raw.tin.desc=A chunk of unprocessed tin. Can be smelted into a tin ingot.
 item.industry.ore.raw.copper.name=Raw Copper Ore
